@@ -1,5 +1,7 @@
 2009-03-07 Denton Woods <doomwiz@users.sf.net>
 	* Updated version numbers to 1.7.8 project-wide.
+	* DevIL_manual.texi: Added several file formats to the appendix.
+	* il_io.c: Updated Doxygen comments to loading/saving functions.
 
 2009-03-06 Denton Woods <doomwiz@users.sf.net>
 	* Updated VC8 projects to use il_mp3.c.
